Fix issue where focused jump input's text isn't properly inversed.

--- a/public/scss/types/_jump.scss
+++ b/public/scss/types/_jump.scss
@@ -14,6 +14,7 @@
     transform: scale(1.02);
     z-index: 1;
     border: none;
+    color: $uforms-font-jump-color;
 
     &::placeholder {
       color: $uforms-font-jump-color;
